--- a/OracleJETApplication/templates/labor.tmpl.html
+++ b/OracleJETApplication/templates/labor.tmpl.html
@@ -1,32 +1,7 @@
 <!-- small template -->
 <script type="text/html" id="sm_template">
-    <div id="tabs-container">
-        <div id="selected-title" data-bind="click: hideSections">
-            <a href="#" data-bind="text:currentSection"></a>
-        </div>
-
-        <div id="tabs" data-bind="ojComponent:{component: 'ojTabs',  orientation: 'vertical'}">
-            <!-- tab bar -->
-            <ul class="vertical-tabs" data-bind="visible: sectionsState, foreach: dataTabSource">
-                <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
-            </ul>
-            <!-- tab contents -->
-            <!-- ko foreach: dataTabSource -->
-            <div data-bind="attr: {id: 'tab-' + id}">
-                <h2><span data-bind="text: $parent.location"></span> <span data-bind="text: $parent.currentSection"></span></h2>
-                <div data-bind="ojModule: {
-                            name: 'labor/' + fileNameJs,
-                            viewName: 'labor/' + fileName + '-small'}">
-                </div>
-            </div>
-            <!-- /ko -->
-        </div>
-    </div>
-</script>
-
-<!-- large template -->
-<script type="text/html" id="md_lg_xl_template">
-    <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
+<!--
+     <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
         <h1>
             <span data-bind="css: pageHeadingIconClass"></span>
             <span data-bind="text: pageHeading"></span>
@@ -36,24 +11,71 @@
         <a href="#">change</a>
         </span>
     </div>
-    <div id="tabs" data-bind="ojComponent:{component: 'ojTabs'}">
-        <!-- tab bar -->
-        <ul data-bind="foreach: dataTabSource">
-            <li data-bind="attr: {id: id}, click: $parent.selectedSection"><span data-bind="text:name"></span></li>
-        </ul>
-
-        <!-- tab contents -->
-        <!-- ko foreach: dataTabSource -->
-        <div data-bind="attr: {id: 'tab-' + id}">
-            <h2><span data-bind="text: $parent.location"></span> <span data-bind="text: $parent.currentSection"></span></h2>
-            <div data-bind="ojModule: {
-                            name: 'labor/' + fileNameJs,
-                            viewName: 'labor/' + fileName + '-large'}">
+-->
+    <div class="oj-row oj-cols-nopad">
+        <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
+            <div data-bind="with: router.currentState()">
+                <div id="currentPage" data-bind="text: label"></div>
             </div>
         </div>
-        <!-- /ko -->
+        <div class="oj-row">
+            <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
+                <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
+                    <ul data-bind="foreach: router.states">
+                        <li data-bind="attr: {id: id}, click: $parent.toggleSections">
+                            <a data-bind="text: label"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
+                <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                    <h2 id="currentPage" data-bind="text: label"></h2>
+
+                    <div data-bind="ojModule: {
+                                name: 'labor/' + value,
+                                viewName: 'labor/' + value +'/' + value + '-small'}">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+
+<!-- large template -->
+<script type="text/html" id="md_lg_xl_template">
+    <div class="oj-col oj-md-12 page-header">
+        <h1>
+            <span data-bind="css: pageHeadingIconClass"></span>
+            <span data-bind="text: pageHeading"></span>
+        </h1>
+        <span class="page-sub-navigation">
+            <span data-bind="text: pageSubNavigation"></span>
+        <a href="#">change</a>
+        </span>
     </div>
 
+    <div class="oj-row">
+        <div class="oj-md-12 oj-col">
+            <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
+                <ul data-bind="foreach: router.states">
+                    <li data-bind="attr: {id: id}">
+                        <a data-bind="text: label"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
+            <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                <h2 id="currentPage" data-bind="text: label"></h2>
+
+                <div data-bind="ojModule: {
+                            name: 'labor/' + value,
+                            viewName: 'labor/' + value +'/' + value + '-large'}">
+                </div>
+            </div>
+        </div>
+    </div>
 </script>
 
 <div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
