--- a/OracleJETApplication/templates/enterprise.tmpl.html
+++ b/OracleJETApplication/templates/enterprise.tmpl.html
@@ -1,5 +1,81 @@
-<h1>Enterprises Content Area</h1>
+<!-- small template -->
+<script type="text/html" id="sm_template">
+<!--
+     <div class="oj-col oj-md-12 oj-lg-12 oj-xl-12 page-header">
+        <h1>
+            <span data-bind="css: pageHeadingIconClass"></span>
+            <span data-bind="text: pageHeading"></span>
+        </h1>
+        <span class="page-sub-navigation">
+            <span data-bind="text: pageSubNavigation"></span>
+        <a href="#">change</a>
+        </span>
+    </div>
+-->
+    <div class="oj-row oj-cols-nopad">
+        <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: router.stateId(), click:toggleSections">
+            <div data-bind="with: router.currentState()">
+                <div id="currentPage"><span data-bind="text: label"></span><span data-bind="css: value"></span></div>
+            </div>
+        </div>
+        <div class="oj-row">
+            <div class="oj-sm-12 oj-col" data-bind="visible: sectionsState">
+                <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none'}">
+                    <ul data-bind="foreach: router.states">
+                        <li data-bind="attr: {id: id}, click: $parent.toggleSections">
+                            <a data-bind="text: label"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="oj-sm-12 oj-col" data-bind="if: router.stateId()">
+                <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                    <h2 id="currentPage" data-bind="text: label"></h2>
 
-<h2 data-bind="text: $root.router.currentValue" />
+                    <div data-bind="ojModule: {
+                                name: 'enterprise/' + id,
+                                viewName: 'enterprise/' + id +'/' + id + '-small'}">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
 
-<div data-bind="text: something"></div>
+<!-- large template -->
+<script type="text/html" id="md_lg_xl_template">
+    <div class="oj-col oj-md-12 page-header">
+        <h1>
+            <span data-bind="css: pageHeadingIconClass"></span>
+            <span data-bind="text: pageHeading"></span>
+        </h1>
+<!--        <span class="page-sub-navigation">
+            <span data-bind="text: pageSubNavigation"></span>
+        <a href="#">change</a>-->
+        </span>
+    </div>
+
+    <div class="oj-row">
+        <div class="oj-md-12 oj-col">
+            <div id="tabs" data-bind="ojComponent: {component: 'ojNavigationList', selection: router.stateId(), beforeSelect: selectHandler, drillMode: 'none', edge: 'top'}">
+                <ul data-bind="foreach: router.states">
+                    <li data-bind="attr: {id: id}">
+                        <a data-bind="text: label"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="oj-md-12 oj-col" data-bind="if: router.stateId()">
+            <div class="oj-panel tab-content" data-bind="with: router.currentState()">
+                <h2 id="currentPage"><span data-bind="text: label"></span> <span data-bind="css: value"></span></h2>
+
+                <div data-bind="ojModule: {
+                            name: 'enterprise/' + value,
+                            viewName: 'enterprise/' + value +'/' + value + '-large'}">
+                </div>
+            </div>
+        </div>
+    </div>
+</script>
+
+<div data-bind="template: {name: $root.medium() ? 'md_lg_xl_template' : 'sm_template'}"></div>
